<package>
    <name>turtlebot_stereo</name>
    <version>0.0.1</version>
    <description>
      Turltebot navigation with ZED stereo camera
    </description>
    <author>Xincheng Li</author>
    <maintainer email="lixc12@outlook.com">Xincheng Li</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rtabmap_ros</build_depend>
    <build_depend>turtlebot_bringup</build_depend>

    <run_depend>rtabmap_ros</run_depend>
    <run_depend>turtlebot_bringup</run_depend>

    <export>
    </export>

</package>


